--- a/app.json
+++ b/app.json
@@ -1,33 +1,29 @@
 {
-  "expo": {
-    "name": "mx_explore",
-    "slug": "mx_explore",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/LogoBlue.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/Splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-font"
-    ]
-  }
+	"expo": {
+		"name": "travello",
+		"slug": "travello",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/LogoBlue.png",
+		"userInterfaceStyle": "light",
+		"splash": {
+			"image": "./assets/Splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#24BAEC"
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"supportsTablet": true
+		},
+		"android": {
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/adaptive-icon.png",
+				"backgroundColor": "#ffffff"
+			}
+		},
+		"web": {
+			"favicon": "./assets/favicon.png"
+		},
+		"plugins": ["expo-font"]
+	}
 }
