--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@react-navigation/bottom-tabs": "^6.5.14",
 		"@react-navigation/native": "^6.1.12",
 		"@react-navigation/stack": "^6.3.23",
+		"@reduxjs/toolkit": "^2.2.1",
 		"expo": "~50.0.8",
 		"expo-app-loading": "^2.1.1",
 		"expo-blur": "~12.9.2",
@@ -29,7 +30,8 @@
 		"react-native-responsive-screen": "^1.4.2",
 		"react-native-safe-area-context": "4.8.2",
 		"react-native-screens": "~3.29.0",
-		"react-native-vector-icons": "^10.0.3"
+		"react-native-vector-icons": "^10.0.3",
+		"react-redux": "^9.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
